# 2B3ChromieApp

./: .gitignore  .gitmodules  CMakeLists.txt  Main.qml  RisoColors.qml  colorspacegenerator.cpp  colorspacegenerator.h  imageprovider.cpp  imageprovider.h  main.cpp
